--- a/day09/06_string.html
+++ b/day09/06_string.html
@@ -66,6 +66,7 @@
         let id = rNum.charAt(rNum.indexOf('-')+1); // index = 7
         console.log(id == '1' || id == '3') ? '남' : '여';
 
+        //git test
     </script>
 </body>
 </html>
