--- a/day09/05-01_eventEx04.html
+++ b/day09/05-01_eventEx04.html
@@ -19,7 +19,7 @@
         <button type="button" onclick="getDatas()">객체로 전송</button>
     </form>
     전송받은 데이터 표로 <button type="button" id="printBtn">출력</button>
-    <table border="1" id="dataTable"></table>
+    <table style="border: 1px soild black;" id="dataTable"></table>
 
     <script>
         const dataObject = {
@@ -63,4 +63,3 @@
     </script>
 </body>
 </html>
-[출처] day8-js (비공개 카페)
