--- a/day13/09_Exam02.html
+++ b/day13/09_Exam02.html
@@ -4,44 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .calculator{
-            width: 220px;
-            height: 310px;
-            background: linear-gradient(skyblue, pink);
-        }
-        input{
-            width: 210px;
-            height: 50px;
-        }
-        button{
-            width: 50px;
-            height: 50px;
-            border: 1px solid black;
-        }
-        button:hover{
-            background-color: palegreen;
-        }
-        .clear{
-            width: 161px;
-            background-color: pink;
-        }
-        .operator{
-            background-color: skyblue;
-        }
-        .result{
-            width: 105px;
-        }
-        .dot{
-            background-color: palegoldenrod;
-        }
-    </style>
 </head>
 <body>
     <div class="calculator">
         <form action="" name="froms">
             <input type="text" id="output"><br>
-            <button type="button" class="clear" value="c">c</button>
+            <button type="button" class="clear" value="C">C</button>
             <button type="button" class="operator" value="/">/</button><br>
             <button type="button" value="1">1</button>
             <button type="button" value="2">2</button>
@@ -55,47 +23,78 @@
             <button type="button" value="8">8</button>
             <button type="button" value="9">9</button>
             <button type="button" class="operator" value="-">-</button><br>
-            <button type="button" class="dot" value=".">.</button>
+            <button type="button" value=".">.</button>
             <button type="button" value="0">0</button>
             <button type="button" class="operator result" value="=">=</button><br>
         </form>
     </div>
     <script>
+        const output = document.getElementById('output');
+        let outputValue = '';
+
+        function operation(f, o, l){
+            let result = 0;
+            switch(o){
+                case "+": result = f + l; break;
+                case "-": result = f - l; break;
+                case "*": result = f * l; break;
+                case "/": result = f / l; break;
+            }
+            return result.toFixed(2);
+        }
+
+        function extractValue(strValue){
+            // string 13.5 + 12.3 = 연산자와 피연산자로 나누기
+            console.log(strValue);
+            let firstNum = strValue.substring(0, strValue.indexOf(" "));
+            let operator = strValue.substr(strValue.indexOf(" ")+1, 1); // 시작번지부터 1개
+            let lastNum = strValue.substring(strValue.lastIndexOf(" ")+1); // 마지막 공백부터 끝까지
+            console.log(firstNum, operator, lastNum);
+            // 계산값 호출
+            return operation(parseFloat(firstNum), operator, parseFloat(lastNum));
+        }
+
         document.querySelector('.calculator').addEventListener('click', (e)=>{
             // console.log(e.target);  // 내가 선택한 객체
             // console.log(e.target.value); // 내가 선택한 객체의 value 값
             // console.log(typeof e.target.value);
             // eval 함수 : 절대 사용하면 안 됨.
-
-            let cnt = 0;
-            let op = '';
-            let result = 0;
-            let output = document.getElementById('output');
-            if((e.target.value != '+') || (e.target.value != '-') || (e.target.value != '*') || (e.target.value != '/') || (e.target.value != '=') || (e.target.value != 'c') || (e.target.value != '.')){
-                cnt ++;
-                if(cnt == 1){
-                    let Num1 = Number(e.target.value);
-                    output.innerText = Num1;
-                }else if(cnt == 2){
-                    let Num2 = Number(e.target.value);
-                    output.innerText = Num2;
+            // NaN => op로 사용
+            let btnVal = e.target.value;
+            output.value += btnVal;
+            if(!isNaN(btnVal)){        // 버튼의 값이 숫자라면...
+                outputValue += btnVal;
+            }else{
+                // 숫자가 아닐 때
+                // + - * / . = C undefined(addEventListener 여백 클릭 시)
+                if(btnVal != undefined){
+                    switch(btnVal){
+                        case ".": 
+                            // 숫자에 붙어서 소수점 역할을 하기.
+                            outputValue += btnVal;
+                            break;
+                        case "C": 
+                            // output 창을 지우기
+                            outputValue = '';
+                            output.value = '';
+                            break;
+                        default: 
+                            // 사칙연산 + - * / =
+                            let sub = ''; // 결과를 받을 변수
+                            if(btnVal == '='){
+                                // 연산의 결과를 호출(function 작업)
+                                sub = extractValue(outputValue); // 결과값 리턴
+                                outputValue = sub;
+                            }else{
+                                outputValue += ` ${btnVal} `; 
+                                // string 13.5 + 12.3 =
+                                // 이후 function 작업으로 피연산자와 연산자로 분리시킴
+                            }
+                            break;
+                    }
                 }
-            }else if(e.target.value == '+'){
-                op = '+';
-                output.innerText = op;
-            }else if(e.target.value == '-'){
-                op = '-';
-                output.innerText = op;
-            }else if(e.target.value == '*'){
-                op = '*';
-                output.innerText = op;
-            }else if(e.target.value == '/'){
-                op = '/';
-                output.innerText = op;
-            }else if(e.target.value == '='){
-                result = `${Num1} ${op} ${Num2}`;
-                output.innerHTML = result;
             }
+            output.value = outputValue;
         });
     </script>
 </body>
