--- a/day13/09_Exam02.html
+++ b/day13/09_Exam02.html
@@ -4,28 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="09_style.css">
 </head>
 <body>
     <div class="calculator">
         <form action="" name="froms">
-            <input type="text" id="output"><br>
+            <input type="text" id="output">
             <button type="button" class="clear" value="C">C</button>
-            <button type="button" class="operator" value="/">/</button><br>
+            <button type="button" class="operator" value="/">/</button>
             <button type="button" value="1">1</button>
             <button type="button" value="2">2</button>
             <button type="button" value="3">3</button>
-            <button type="button" class="operator" value="*">*</button><br>
+            <button type="button" class="operator" value="*">*</button>
             <button type="button" value="4">4</button>
             <button type="button" value="5">5</button>
             <button type="button" value="6">6</button>
-            <button type="button" class="operator" value="+">+</button><br>
+            <button type="button" class="operator" value="+">+</button>
             <button type="button" value="7">7</button>
             <button type="button" value="8">8</button>
             <button type="button" value="9">9</button>
-            <button type="button" class="operator" value="-">-</button><br>
-            <button type="button" value=".">.</button>
+            <button type="button" class="operator" value="-">-</button>
+            <button type="button" class="dot" value=".">.</button>
             <button type="button" value="0">0</button>
-            <button type="button" class="operator result" value="=">=</button><br>
+            <button type="button" class="operator result" value="=">=</button>
         </form>
     </div>
     <script>
