--- a/day12/02_정규표현식.html
+++ b/day12/02_정규표현식.html
@@ -76,7 +76,7 @@
             [] : or의 묶음 / 문자들 중 하나
             /[abc]/ => "a", "b", "c" 중 하나를 포함하는
             /abc/ => "abc"를 포함하는
-            [a-z] => a-z중 하나를 포함하느
+            [a-z] => a-z중 하나를 포함하는
             [^abc] => "a", "b", "c" 제외
         </li>
         <li>
